Create product detail page with images, description, and add-to-cart button

--- a/index.html
+++ b/index.html
@@ -91,6 +91,422 @@
           </div>
         </main>
       </div>
+      <!-- =================Deals and offers section============================= -->
+      <div class="deals-offers-container">
+        <div class="box1">
+          <h3 class="deals-h3">Deals and offers</h3>
+          <p class="deals-p">Hygiene equipments</p>
+
+          <div class="date-time">
+            <div class="deals-day">
+              <p class="date">04</p>
+              <p class="day-name">Days</p>
+            </div>
+            <div class="deals-hour">
+              <p class="time-hour">13</p>
+              <p class="hour">Hour</p>
+            </div>
+            <div class="deals-min">
+              <p class="time-min">34</p>
+              <p class="min">Min</p>
+            </div>
+            <div class="deals-sec">
+              <p class="time-sec">56</p>
+              <p class="sec">Sec</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="box2">
+          <img src="./assets/Image/tech/6.png" alt="" />
+          <p>Smart watches</p>
+          <p class="off">-25%</p>
+        </div>
+
+        <div class="box3">
+          <img src="./assets/Image/tech/8.png" alt="" />
+          <p>Laptops</p>
+          <p class="off">-15%</p>
+        </div>
+
+        <div class="box4">
+          <img src="./assets/Image/tech/image 23.png" alt="" />
+          <p>GoPro cameras</p>
+          <p class="off">-40%</p>
+        </div>
+
+        <div class="box5">
+          <img src="./assets/Image/tech/image 34.png" alt="" />
+          <p>Headphones</p>
+          <p class="off">-25%</p>
+        </div>
+
+        <div class="box6">
+          <img src="./assets/Image/tech/image 29.png" alt="" />
+          <p>Canon cameras</p>
+          <p class="off">-25%</p>
+        </div>
+      </div>
+
+      <!-- ====================Home and Door ============================== -->
+      <div class="home-outdoor-container">
+        <div class="left-outdoor">
+          <img
+            src="./assets/Image/backgrounds/Group 969.png"
+            alt=""
+            class="left-backGorund-img"
+          />
+          <div class="left-title">
+            <span>Home and</span> <span>outdoor</span>
+          </div>
+          <div>
+            <button type="" class="left-button" style="--top: 90px">
+              Source now
+            </button>
+          </div>
+        </div>
+        <div class="right-outdoor-layout">
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Soft chairs</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/interior/1.png" alt="" />
+          </div>
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Sofa & chair</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/interior/3.png" alt="" />
+          </div>
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Kitchen dishes</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/interior/6.png" alt="" />
+          </div>
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Smart watches</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/interior/7.png" alt="" />
+          </div>
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Kitchen mixer</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/interior/8.png" alt="" />
+          </div>
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Blenders</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/interior/9.png" alt="" />
+          </div>
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Home appliance</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/interior/image 89.png" alt="" />
+          </div>
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Coffee maker</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/interior/image 90.png" alt="" />
+          </div>
+        </div>
+      </div>
+
+      <!-- ================== Consumer electronics and gadgets========================-->
+      <div class="home-outdoor-container">
+        <div class="left-outdoor">
+          <img
+            src="./assets/Image/backgrounds/image 98.png"
+            alt=""
+            class="left-backGorund-img"
+          />
+          <div class="left-title">
+            <span>Consumer</span> <span>electronics and </span
+            ><span> gadgets</span>
+          </div>
+          <div>
+            <button type="" class="left-button" style="--top: 120px">
+              Source now
+            </button>
+          </div>
+        </div>
+        <div class="right-outdoor-layout">
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Smart watches</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/tech/8.png" alt="" />
+          </div>
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Cameras</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/tech/6.png" alt="" />
+          </div>
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Smart watches</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/tech/image 23.png" alt="" />
+          </div>
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Gaming set</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/tech/image 86.png" alt="" />
+          </div>
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Kitchen mixer</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/tech/image 85.png" alt="" />
+          </div>
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Laptops & PC</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/tech/image 34.png" alt="" />
+          </div>
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Smartphones</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/tech/image 29.png" alt="" />
+          </div>
+          <div class="outdoor-div">
+            <p class="outdoor-div-p">Coffee maker</p>
+            <p class="outdoor-div-p2">From</p>
+            <p class="outdoor-div-p2">USD 19</p>
+            <img src="./assets/Image/tech/image 33.png" alt="" />
+          </div>
+        </div>
+      </div>
+
+      <!-- ============Send quote to suppliers section======================= -->
+      <div class="suppliers-container">
+        <img src="./assets/Image/backgrounds/Group 982.png" alt="" />
+        <div class="text-div">
+          <span>An easy way to send </span
+          ><span>requests to all suppliers</span>
+
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt.
+          </p>
+        </div>
+        <div class="sender-container">
+          <!-- <div class="sender-child"> -->
+          <h3>Send quote to suppliers</h3>
+          <input
+            type="text"
+            placeholder="What item you need?"
+            class="input-one"
+          />
+          <textarea name="message" id="" class="textarea">
+Type more details</textarea
+          >
+          <div class="input-button">
+            <input type="text" class="input-two" placeholder="Quantity" />
+            <button class="input-btn">
+              Pec <img src="./assets/icons/Vector.png" alt="" />
+            </button>
+          </div>
+          <button class="send-inquiry-btn">Send inquiry</button>
+          <!-- </div> -->
+        </div>
+      </div>
+      <!-- =============Recommended items=============================== -->
+      <div class="parant-container">
+        <h2>Recommended items</h2>
+        <div class="parent">
+          <div class="div1">
+            <img
+              src="./assets/Image/cloth/Bitmap.png"
+              alt=""
+              class="recommended-img"
+            />
+            <p class="price">$10.30</p>
+            <p class="title">
+              T-shirts with multiple <br />
+              colors, for men
+            </p>
+          </div>
+
+          <div class="div2">
+            <img
+              src="./assets/Image/cloth/2 1.png"
+              alt=""
+              class="recommended-img"
+            />
+            <p class="price">$2.99</p>
+            <p class="title">
+              Jeans shorts for men <br />
+              blue color
+            </p>
+          </div>
+
+          <div class="div3">
+            <img
+              src="./assets/Image/cloth/image 24.png"
+              alt=""
+              class="recommended-img"
+            />
+            <p class="price">$15.50</p>
+            <p class="title">
+              Brown winter coat <br />
+              medium size
+            </p>
+          </div>
+
+          <div class="div4">
+            <img
+              src="./assets/Image/cloth/image 26.png"
+              alt=""
+              class="recommended-img"
+            />
+            <p class="price">$8.49</p>
+            <p class="title">
+              Jeans bag for travel <br />
+              for men
+            </p>
+          </div>
+
+          <div class="div5">
+            <img
+              src="./assets/Image/cloth/image 30.png"
+              alt=""
+              class="recommended-img"
+            />
+            <p class="price">$6.75</p>
+            <p class="title">Leather wallet</p>
+          </div>
+
+          <div class="div6">
+            <img
+              src="./assets/Image/cloth/Bitmap (2).png"
+              alt=""
+              class="recommended-img"
+            />
+            <p class="price">$12.00</p>
+            <p class="title">
+              Canon camera <br />
+              black, 100x zoom
+            </p>
+          </div>
+
+          <div class="div7">
+            <img
+              src="./assets/Image/tech/8.png"
+              alt=""
+              class="recommended-img"
+            />
+
+            <p class="price">$9.20</p>
+            <p class="title">
+              Headset for gaming <br />
+              with mic
+            </p>
+          </div>
+
+          <div class="div8">
+            <img
+              src="./assets/Image/tech/image 29.png"
+              alt=""
+              class="recommended-img"
+            />
+            <p class="price">$18.99</p>
+            <p class="title">
+              Smartwatch <br />
+              silver color modern
+            </p>
+          </div>
+
+          <div class="div9">
+            <img
+              src="./assets/Image/interior/1.png"
+              alt=""
+              class="recommended-img"
+            />
+            <p class="price">$4.50</p>
+            <p class="title">
+              Blue wallet for men <br />
+              leather material
+            </p>
+          </div>
+
+          <div class="div10">
+            <img
+              src="./assets/Image/interior/7.png"
+              alt=""
+              class="recommended-img"
+            />
+            <p class="price">$22.40</p>
+            <p class="title">
+              Jeans bag for travel <br />
+              for men
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- ==============================Our extra services===================================== -->
+      <div class="services-container">
+        <h2>Our extra services</h2>
+        <div class="services-box">
+          <div class="div01">
+            <img
+              src="./assets/Image/backgrounds/Mask group.png"
+              alt=""
+              class="services-img"
+            />
+            <img src="./assets/icons/search.png" alt="" class="iocn-img" />
+            <p class="service-p">
+              Source from <br />
+              Industry Hubs
+            </p>
+          </div>
+          <div class="div02">
+            <img
+              src="./assets/Image/backgrounds/Mask group (1).png"
+              alt=""
+              class="services-img"
+            />
+            <img src="./assets/icons/inventory_2.png" alt="" class="iocn-img" />
+            <p class="service-p">
+              Customize Your <br />
+              Products
+            </p>
+          </div>
+          <div class="div03">
+            <img
+              src="./assets/Image/backgrounds/image 106.png"
+              alt=""
+              class="services-img"
+            />
+            <img src="./assets/icons/send.png" alt="" class="iocn-img" />
+            <p class="service-p">
+              Fast, reliable shipping <br />
+              by ocean or air
+            </p>
+          </div>
+          <div class="div04">
+            <img
+              src="./assets/Image/backgrounds/image 107.png"
+              alt=""
+              class="services-img"
+            />
+            <img src="./assets/icons/security.png" alt="" class="iocn-img" />
+            <p class="service-p">
+              Product monitoring <br />
+              and inspection
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Footer -->
