feat: add suppliers grid section, email input with icon, subscribe button spacing, and image hover scale transition effects

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <div class="right-login">
                 <div class="login-id">
                   <img
-                    src="./assets/icons/Avatar.png"
+                    src="./assets/icons/login-icon.png"
                     alt=""
                     class="login-id-img"
                   />
@@ -507,10 +507,107 @@ Type more details</textarea
           </div>
         </div>
       </div>
+      <!-- ======================Suppliers by region====================================== -->
+      <div class="suppliers-section">
+        <h2>Suppliers by region</h2>
+
+        <div class="suppliers-grid">
+          <div class="supplier-item">
+            <img src="./assets/Image/flags/AE@2x.png" alt="" />
+            <div>
+              <p class="country">Arabic Emirates</p>
+              <p class="url">shopname.ae</p>
+            </div>
+          </div>
+
+          <div class="supplier-item">
+            <img src="./assets/Image/flags/icon.png" alt="" />
+            <div>
+              <p class="country">Australia</p>
+              <p class="url">shopname.ae</p>
+            </div>
+          </div>
+
+          <div class="supplier-item">
+            <img src="./assets/Image/flags/US@2x.png" alt="" />
+            <div>
+              <p class="country">United States</p>
+              <p class="url">shopname.ae</p>
+            </div>
+          </div>
+
+          <div class="supplier-item">
+            <img src="./assets/Image/flags/RU@2x.png" alt="" />
+            <div>
+              <p class="country">Russia</p>
+              <p class="url">shopname.ru</p>
+            </div>
+          </div>
+
+          <div class="supplier-item">
+            <img src="./assets/Image/flags/IT@2x.png" alt="" />
+            <div>
+              <p class="country">Italy</p>
+              <p class="url">shopname.it</p>
+            </div>
+          </div>
+
+          <div class="supplier-item">
+            <img src="./assets/Image/flags/DE@2x.png" alt="" />
+            <div>
+              <p class="country">Denmark</p>
+              <p class="url">denmark.com.dk</p>
+            </div>
+          </div>
+
+          <div class="supplier-item">
+            <img src="./assets/Image/flags/FR@2x.png" alt="" />
+            <div>
+              <p class="country">France</p>
+              <p class="url">shopname.com.fr</p>
+            </div>
+          </div>
+
+          <div class="supplier-item">
+            <img src="./assets/Image/flags/pak.jpg" alt="" />
+            <div>
+              <p class="country">Pakistan</p>
+              <p class="url">shopname.pak</p>
+            </div>
+          </div>
+
+          <div class="supplier-item">
+            <img src="./assets/Image/flags/CN@2x.png" alt="" />
+            <div>
+              <p class="country">China</p>
+              <p class="url">shopname.ae</p>
+            </div>
+          </div>
+
+          <div class="supplier-item">
+            <img src="./assets/Image/flags/GB@2x.png" alt="" />
+            <div>
+              <p class="country">Great Britain</p>
+              <p class="url">shopname.co.uk</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- ============Subscribe on our newsletter====================== -->
+    <div class="subscribe-container">
+      <h2>Subscribe on our newsletter</h2>
+      <p>
+        Get daily news on upcoming offers from many suppliers all over the world
+      </p>
+      <div class="input-subscribe-btn">
+        <input type="email" class="input-icon" placeholder="Email" />
+        <button class="subecribe-button">Subscribe</button>
+      </div>
     </div>
 
     <!-- Footer -->
-    <!-- <div id="footer"></div> -->
+    <div id="footer"></div>
 
     <script src="js/main.js"></script>
   </body>
