--- a/index.html
+++ b/index.html
@@ -609,6 +609,10 @@ Type more details</textarea
     <!-- Footer -->
     <div id="footer"></div>
 
+    <!-- pages -->
+
+    <div id="allCategory"></div>
+
     <script src="js/main.js"></script>
   </body>
 </html>
