Add all pages and updates

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>E-Shop Fashion</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <!-- Header -->
     <div id="header"></div>
@@ -17,31 +18,49 @@
           <aside class="left-aside">
             <ul class="left-ul">
               <li class="left-li">
-                <a href="#" class="left-a">Automobiles</a>
+                <a href="/pages/product-list.html" class="left-a"
+                  >Automobiles</a
+                >
               </li>
               <li class="left-li">
-                <a href="#" class="left-a">Clothes and wear</a>
+                <a href="/pages/product-list.html" class="left-a"
+                  >Clothes and wear</a
+                >
               </li>
               <li class="left-li">
-                <a href="#" class="left-a">Home interiors</a>
+                <a href="/pages/product-list.html" class="left-a"
+                  >Home interiors</a
+                >
               </li>
               <li class="left-li">
-                <a href="#" class="left-a">Computer and tech</a>
+                <a href="/pages/product-list.html" class="left-a"
+                  >Computer and tech</a
+                >
               </li>
               <li class="left-li">
-                <a href="#" class="left-a">Tools, equipments</a>
+                <a href="/pages/product-list.html" class="left-a"
+                  >Tools, equipments</a
+                >
               </li>
               <li class="left-li">
-                <a href="#" class="left-a">Sports and outdoor</a>
+                <a href="/pages/product-list.html" class="left-a"
+                  >Sports and outdoor</a
+                >
               </li>
               <li class="left-li">
-                <a href="#" class="left-a">Animal and pets</a>
+                <a href="/pages/product-list.html" class="left-a"
+                  >Animal and pets</a
+                >
               </li>
               <li class="left-li">
-                <a href="#" class="left-a">Machinery tools</a>
+                <a href="/pages/product-list.html" class="left-a"
+                  >Machinery tools</a
+                >
               </li>
               <li class="left-li">
-                <a href="#" class="left-a">More category</a>
+                <a href="/pages/product-list.html" class="left-a"
+                  >More category</a
+                >
               </li>
             </ul>
           </aside>
