--- a/pages/cart.html
+++ b/pages/cart.html
@@ -28,93 +28,7 @@
             <!-- Left Column: Cart Items -->
             <div class="cart-content">
 
-                <!-- Item 1 -->
-                <div class="cart-item">
-                    <div class="item-img">
-                        <img src="../assets/Image/clothing/1.jpg" alt="T-shirt">
-                    </div>
-                    <div class="item-details">
-                        <div class="item-info-top">
-                            <div class="item-text">
-                                <h3>T-shirts with multiple colors, for men and lady</h3>
-                                <p class="item-meta">Size: medium, Color: blue, Material: Plastic</p>
-                                <p class="seller">Seller: Artel Market</p>
-                            </div>
-                            <div class="item-actions-mobile">
-                                <button class="btn-icon"><i class="fa-solid fa-ellipsis-vertical"></i></button>
-                            </div>
-                        </div>
-
-                        <div class="item-controls">
-                            <button class="action-btn remove">Remove</button>
-                            <button class="action-btn save">Save for later</button>
-                        </div>
-                    </div>
-                    <div class="item-price-qty">
-                        <span class="price">$78.99</span>
-                        <select class="qty-select">
-                            <option>Qty: 9</option>
-                            <option>Qty: 1</option>
-                            <option>Qty: 2</option>
-                        </select>
-                    </div>
-                </div>
-
-                <!-- Item 2 -->
-                <div class="cart-item">
-                    <div class="item-img">
-                        <img src="../assets/Image/clothing/image 28.png" alt="Bag">
-                    </div>
-                    <div class="item-details">
-                        <div class="item-info-top">
-                            <div class="item-text">
-                                <h3>T-shirts with multiple colors, for men and lady</h3>
-                                <p class="item-meta">Size: medium, Color: blue, Material: Plastic</p>
-                                <p class="seller">Seller: Best factory LLC</p>
-                            </div>
-                        </div>
-                        <div class="item-controls">
-                            <button class="action-btn remove">Remove</button>
-                            <button class="action-btn save">Save for later</button>
-                        </div>
-                    </div>
-                    <div class="item-price-qty">
-                        <span class="price">$39.00</span>
-                        <select class="qty-select">
-                            <option>Qty: 3</option>
-                            <option>Qty: 1</option>
-                            <option>Qty: 2</option>
-                        </select>
-                    </div>
-                </div>
-
-                <!-- Item 3 -->
-                <div class="cart-item">
-                    <div class="item-img">
-                        <img src="../assets/Image/interior/5.png" alt="Lamp">
-                    </div>
-                    <div class="item-details">
-                        <div class="item-info-top">
-                            <div class="item-text">
-                                <h3>T-shirts with multiple colors, for men and lady</h3>
-                                <p class="item-meta">Size: medium, Color: blue, Material: Plastic</p>
-                                <p class="seller">Seller: Artel Market</p>
-                            </div>
-                        </div>
-                        <div class="item-controls">
-                            <button class="action-btn remove">Remove</button>
-                            <button class="action-btn save">Save for later</button>
-                        </div>
-                    </div>
-                    <div class="item-price-qty">
-                        <span class="price">$170.50</span>
-                        <select class="qty-select">
-                            <option>Qty: 1</option>
-                            <option>Qty: 2</option>
-                            <option>Qty: 3</option>
-                        </select>
-                    </div>
-                </div>
+                <!-- Items will be injected here by main.js -->
 
                 <div class="cart-actions-row">
                     <button class="back-shop-btn"><i class="fa-solid fa-arrow-left"></i> Back to shop</button>
@@ -196,51 +110,7 @@
         <div class="saved-later-section">
             <h3>Saved for later</h3>
             <div class="saved-grid">
-
-                <div class="product-card saved-card">
-                    <div class="img-wrapper">
-                        <img src="../assets/Image/tech/image 34.png" alt="Tablet">
-                    </div>
-                    <div class="card-content">
-                        <div class="price">$99.50</div>
-                        <div class="title">GoPro HERO6 4K Action Camera - Black</div>
-                        <button class="move-cart-btn"><i class="fa-solid fa-cart-shopping"></i> Move to cart</button>
-                    </div>
-                </div>
-
-                <div class="product-card saved-card">
-                    <div class="img-wrapper">
-                        <img src="../assets/Image/tech/6.png" alt="Phone">
-                    </div>
-                    <div class="card-content">
-                        <div class="price">$99.50</div>
-                        <div class="title">GoPro HERO6 4K Action Camera - Black</div>
-                        <button class="move-cart-btn"><i class="fa-solid fa-cart-shopping"></i> Move to cart</button>
-                    </div>
-                </div>
-
-                <div class="product-card saved-card">
-                    <div class="img-wrapper">
-                        <img src="../assets/Image/tech/image 23.png" alt="Watch">
-                    </div>
-                    <div class="card-content">
-                        <div class="price">$99.50</div>
-                        <div class="title">GoPro HERO6 4K Action Camera - Black</div>
-                        <button class="move-cart-btn"><i class="fa-solid fa-cart-shopping"></i> Move to cart</button>
-                    </div>
-                </div>
-
-                <div class="product-card saved-card">
-                    <div class="img-wrapper">
-                        <img src="../assets/Image/tech/image 32.png" alt="Laptop">
-                    </div>
-                    <div class="card-content">
-                        <div class="price">$99.50</div>
-                        <div class="title">GoPro HERO6 4K Action Camera - Black</div>
-                        <button class="move-cart-btn"><i class="fa-solid fa-cart-shopping"></i> Move to cart</button>
-                    </div>
-                </div>
-
+                <!-- Saved Items will be injected here by main.js -->
             </div>
         </div>
 
